--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -112,6 +112,7 @@ The domain of confidentiality has yet been left out so we will introduce one fin
 
 \todo{Make sure this is mentioned in the introduction}
 \todo{Reflect goal of the thesis once it has been set up properly in the introduction}
+\todo{Grafik einleiten}
 With these properties at hand we can introduce our approach to the verification-refinement loop that has been mentioned initially in section \ref{sec:introduction} as well as the introduction of this section and which is depicted in figure \ref{fig:ver-process}.
 Formal verification does not end when a verification procedure returns some result.
 If such a result happens to be a negative one, a formal verification researcher must be able to answer to questions:
