--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -40,8 +40,8 @@ We claim that this approach is
 \end{itemize}
 
 This new approach will be applied to the RISC-V architecture using the model checker nuXmv.
-RISC-V is a modern and open-source \gls{isa} that has first been published in 2011 \cite{RiscVISA-org}.
-A basic architecture that orientates itself by the RISC-V architecture will be modelled in nuXmv.
+RISC-V is a young and open-source \gls{isa} that has first been published in 2011 \cite{RiscVISA-org}.
+A basic architecture inspired by the RISC-V architecture will be modelled in nuXmv.
 nuXmv is a general purpose model checker that supports different specification languages and verification algorithms.
 Using nuXmv allows for enhancing on the approach proposed by \citeauthor{Reid17} in a key aspect:
 In his work, \citeauthor{Reid17} focused on higher lever properties to verify the ARM \gls{isa} against that were limited to making specifications about a single transition of the processor only, i.e. that only take the pre- and post-state of a single cycle of the processor into account.
